--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,20 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<header>
+		<div class="col-xs-3">
+			LOGO
+		</div>
+		<div class="col-xs-4">
+		Keep you in the know when the end is nigh!
+		</div>
+		<div>
+			<%= link_to 'Contribute', '#' %>
+			<%= link_to 'About', '#' %>
+		</div>
+	</header>
+
+	<br class="clear" />
 
 <%= yield %>
 
