--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SplurtyH</title>
+  <title>Doomsday</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
@@ -9,17 +9,22 @@
 <body>
 	<header>
 		<div class="col-xs-3">
-			LOGO
+			<div class="eyes">
+  				<div class="eye eye-left"></div>
+  				<div class="eye eye-right"></div>
+  				
+			</div>
 		</div>
-		<div class="col-xs-4">
-		Keep you in the know when the end is nigh!
+		<div class="col-xs-4 slogan">
+			<h2 id="logo-font">DOOMSDAY</h2>
+			Keeping you in the know when the end is nigh!
 		</div>
-		<div>
-			<%= link_to 'Contribute', '#' %>
-			<%= link_to 'About', '#' %>
+		<div class="col-xs-5 links">
+			<%= link_to 'contribute', '#' %>
+			<%= link_to 'about', '#' %>
 		</div>
 	</header>
-
+	<hr />
 	<br class="clear" />
 
 <%= yield %>
