Formatting and font styling added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Doomsday</title>
+  <title>Doomsayer</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
@@ -16,7 +16,7 @@
 			</div>
 		</div>
 		<div class="col-xs-4 slogan">
-			<h2 id="logo-font">DOOMSDAY</h2>
+			<h2 id="logo-font">DOOMSAYER</h2>
 			Keeping you in the know when the end is nigh!
 		</div>
 		<div class="col-xs-5 links">
