--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,2 +1,3 @@
+<h3> You know its time to build that bomb shelter </br> and join a post-apocalyptic cult... </h3>
 <h1><%= @quote.saying %></h1>
 <h2>- <%= @quote.author %></h2>
