--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -20,16 +20,16 @@ body {
 }
 
 .next-quote {
-    color: #FF00A8;
-    font-size: 20px;
-    padding-left: 30px;
+    color: #00D2FF;
+    font-size: 25px;
+    padding-left: 50px;
     /* Helvetica/Arial-based sans serif stack */
     font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: 600;
 }
 
 .next-quote:hover {
-    color: #bdc3c7;
+    color: #FF00A8;  
     text-decoration: underline;
 }
 
@@ -39,12 +39,13 @@ body {
     font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
     font-weight: bold;
     text-align: right;
-    font-size: 10px;
+    padding-right: 50px;
+    font-size: 15px;
 }
 
 
 .blurb a {
-  color: black;
+  color: #bdc3c7;
 }
 
 /* mouse over link */
