--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -124,7 +124,7 @@ h3 {
 	color: #bdc3c7;
 	font-family: 'Lobster', cursive;
 	text-align: center;
-	margin-top: 100px;
+	margin-top: 15%;
 }
 
 #logo-font {
@@ -153,7 +153,7 @@ h3 {
 	padding-top: 26px;
 	/* Modern Georgia-based serif stack */
 	font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
-	font-size: 20px;
+	font-size: 25px;
 	/*font-weight: bold;*/
 }
 
