--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,18 +9,19 @@
 <body>
 	<header>
 		<div class="col-xs-2">
-			<div class="eyes">
-  				<div class="eye eye-left"></div>
-  				<div class="eye eye-right"></div>
-  				
-			</div>
+			<%= link_to root_path, :class => 'logo' do %>
+				<div class="eyes">
+						<div class="eye eye-left"></div>
+						<div class="eye eye-right"></div>
+				</div>
+			<% end %>
 		</div>
-		<div class="col-xs-4 slogan">
+		<div class="col-xs-5 slogan">
 			<h2 id="logo-font">DOOMSAYER</h2>
 			Keeping you in the know when the end is nigh!
 		</div>
-		<div class="col-xs-6 links">
-			<%= link_to 'contribute', '#' %>
+		<div class="col-xs-5 links">
+			<%= link_to 'contribute', new_quote_path %>
 			<%= link_to 'about', '#' %>
 		</div>
 	</header>
@@ -33,10 +34,10 @@
 
 	<div class="footer">
 		<div class="col-xs-6">
-			<%= link_to "This isn't enough, gimme more!", "#", :class => 'next-quote' %>
+			<%= link_to "This isn't enough, gimme more!", root_path, :class => 'next-quote' %>
 		</div>
 		<div class="col-xs-6 blurb">
-			Proudly built by <a href="http://hayli.github.io">hayli C.</a><br />
+			proudly built by <a href="http://hayli.github.io">hayli C.</a><br />
 		</div>
 	</div>
 
