--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 		</div>
 		<div class="col-xs-5 links">
 			<%= link_to 'contribute', new_quote_path %>
-			<%= link_to 'about', '#' %>
+			<%= link_to 'about', about_path %>
 		</div>
 	</header>
 	<hr />
@@ -41,8 +41,8 @@
 		<div class="col-xs-6">
 			<%= link_to "This isn't enough, gimme more!", root_path, :class => 'next-quote' %>
 		</div>
-		<div class="col-xs-6 blurb">
-			proudly built by <a href="http://hayli.github.io">hayli C.</a><br />
+		<div class="col-xs-6 blurb" style="padding-top:10px;">
+			made by <a href="http://hayli.github.io">hayli C</a>. 2015 <br />
 		</div>
 	</div>
 
