--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,10 +21,34 @@
 			Keeping you in the know when the end is nigh!
 		</div>
 		<div class="col-xs-5 links">
-			<%= link_to 'contribute', new_quote_path %>
+			<!-- Button trigger modal -->
+			<%= link_to 'contribute', '#', :data => {:toggle => 'modal', :target => '#myModal'} %>
 			<%= link_to 'about', about_path %>
 		</div>
 	</header>
+
+	<!-- Modal -->
+	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+					<h4 class="modal-title" id="myModalLabel">Enter Your Doomsaying Here</h4>
+				</div>
+				<%= simple_form_for Quote.new do |f| %>
+					<div class="modal=body">
+							<%= f.input :saying %>
+							<%= f.input :author %>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+						<%= f.submit 'Add Quote', :class => 'btn btn-info' %>
+					</div>
+				<% end %>			
+			</div>
+		</div>
+	</div>
+
 	<hr />
 	<br class="clear" />
 
