--- a/app/views/quotes/about.html.erb
+++ b/app/views/quotes/about.html.erb
@@ -2,7 +2,7 @@
 	<h2 id="about-title">About Doomsayer</h2>
 	<br />
 	<p>
-	Doomsayer was made by <a target="_blank" href="https://github.com/hayli">Hayli</a>. Obsessed by all things apocalyptic and inspired by the game 'Cards Against Humanity', this site was conceived to entertain, as well as collect the best indicators for impeding doom for all you crazy survivalists out there. 
+	Doomsayer was made by <a target="_blank" href="https://github.com/hayli">Hayli</a>. Obsessed by all things apocalyptic, this site was conceived to entertain, as well as collect the best indicators for impeding doom for all you crazy survivalists out there. 
 	</p>
 	<br />
 	<p>
