--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,3 +1,12 @@
-<h3><hr />You know its time to build that bomb shelter </br> and join a post-apocalyptic cult... <hr /></h3>
+<h3><hr />
+<span id="sign-num">SIGN #<%= @quote.id %></span>
+You know its time to build that bomb shelter </br> and join a post-apocalyptic cult... 
+<hr /></h3>
+
 <h1><%= @quote.saying %></h1>
 <h4>- <%= @quote.author %></h4>
+
+<br class="clear" />
+<br />
+<br />
+<br />
