--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -19,7 +19,7 @@ body {
   height: 60px;
 }
 
-@media (max-width: 750px) {
+@media (max-width: 360px) {
   .blurb {
     text-align: center;
   }
@@ -29,13 +29,15 @@ body {
   }
 }
 
-@media (min-width: 751px){
+@media (min-width: 361px){
     .blurb {
     text-align: right;
+    padding-right: 50px;
   }
 
   .nxt {
     text-align: left;
+    padding-left: 50px;
   }
 }
 
