Cleaned up files

--- a/app/views/quotes/about.html.erb
+++ b/app/views/quotes/about.html.erb
@@ -8,7 +8,7 @@
 	<p>
 	Please contribute your words of wisdom! We also accept donations of canned foods or other necessities...
 	<br />
-	Here's a handy guide on 'How to Survive an Apocalypse' - <a target="_blank" href="http://gearpatrol.com/2012/12/18/survivalist-checklist/"> here</a>.
+	A handy guide on 'How to Survive an Apocalypse' - <a target="_blank" href="http://gearpatrol.com/2012/12/18/survivalist-checklist/"> here</a>.
 	</p>
 	<br />
 	<br />
@@ -29,7 +29,5 @@
 	<br class="clear" />
 	<br />
 	<br />
-	<br />
-	<br />
-	<br />
+	
 </div>
