--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -158,6 +158,7 @@ h1 {
 	font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
 	letter-spacing: -1.5px;
 	text-align: center;
+	font-weight: bold;
 }
 
 h4 {
