--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,5 +1,5 @@
 <h3><hr />
-<span id="sign-num">SIGN #<%= @quote.id %></span>
+<span id="sign-num">Doom/ <%= @quote.unique_tag %></span>
 You know its time to build that bomb shelter </br> and join a post-apocalyptic cult... 
 <hr /></h3>
 
